# user_service/docs/swagger.json
@@ -147,6 +147,17 @@
                     "Users"
                 ],
                 "summary": "Get user by username and password. Needs for authorization",
+                "parameters": [
+                    {
+                        "description": "create user struct",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/user.CreateUserDTO"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": ""
@@ -163,7 +174,7 @@
                 }
             }
         },
-        "/api/users/id/:id": {
+        "/api/users/id/{id}": {
             "post": {
                 "consumes": [
                     "application/json"
@@ -175,6 +186,15 @@
                     "Users"
                 ],
                 "summary": "Get user by user id",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "User ID",
+                        "name": "user_id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": ""
@@ -302,7 +322,7 @@
                 }
             }
         },
-        "/api/users/username/:username": {
+        "/api/users/username/{username}": {
             "post": {
                 "consumes": [
                     "application/json"
@@ -314,6 +334,15 @@
                     "Users"
                 ],
                 "summary": "Get user by username endpoint",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Username",
+                        "name": "username",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": ""
